--- a/app/src/main/res/layout/fragment_crime_list.xml
+++ b/app/src/main/res/layout/fragment_crime_list.xml
@@ -1,7 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:id="@+id/crime_recycler_view"></android.support.v7.widget.RecyclerView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_height="match_parent"
+              android:layout_width="match_parent"
+              android:orientation="vertical">
+    <TextView
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/no_crimes"
+        android:text="@string/no_crimes_reported"
+        android:padding="4dp"
+        android:visibility="visible"/>
 
+    <Button
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/create_crime"
+        android:text="@string/new_crime"
+        android:padding="4dp"
+        android:visibility="visible"/>
+
+     <android.support.v7.widget.RecyclerView
+         xmlns:android="http://schemas.android.com/apk/res/android"
+         android:layout_height="match_parent"
+         android:layout_width="match_parent"
+         android:id="@+id/crime_recycler_view"
+    />
+</LinearLayout>
